--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hack The Colosseum | Home</title>
     <meta
       name="description"
-      content="Join us for 'Hack a Tank,' a prestigious national-level 24-hour hackathon organized as part of the grand celebration of the 25th anniversary of SRM Valliammai Engineering College. Register now to showcase your skills, compete for exciting prizes, and be a part of this remarkable event in the world of engineering and technology."
+      content="Join us for Glenelg High School's Competitive Programming Club's upcoming 'Hack the Colosseum' hackathon event!"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="robots" content="index, follow" />
@@ -15,27 +15,27 @@
     <!-- Open Graph Tags -->
     <meta
       property="og:title"
-      content="Hack a Tank | A National Level Hackathon | Home"
+      content="Hack the Colosseum | Home"
     />
     <meta
       property="og:description"
-      content="Join us for 'Hack a Tank,' a prestigious national-level 24-hour hackathon organized as part of the grand celebration of the 25th anniversary of SRM Valliammai Engineering College. Register now to showcase your skills, compete for exciting prizes, and be a part of this remarkable event in the world of engineering and technology."
+      content="Join us for Glenelg High School's Competitive Programming Club's upcoming 'Hack the Colosseum' hackathon event!"
     />
-    <meta
+    <!-- <meta
       property="og:image"
       content="https://www.hackatank.tech/images/diamond.jpg"
-    />
-    <meta property="og:url" content="https://www.hackatank.tech/" />
+    /> -->
+    <!-- <meta property="og:url" content="https://www.hackatank.tech/" /> -->
     <meta property="og:type" content="website" />
 
     <!-- Open Graph Tags - Whatsapp-->
     <meta
       property="og:image"
-      content="https://www.hackatank.tech/images/diamond.jpg"
+      content=""
     />
     <meta
       property="og:image:secure_url"
-      content="https://www.hackatank.tech/images/diamond.jpg"
+      content=""
     />
 
     <meta property="og:image:type" content="image/jpg" />
@@ -45,21 +45,21 @@
     <!-- Twitter Tags -->
     <meta
       property="twitter:title"
-      content="Hack a Tank | A National Level Hackathon | Home"
+      content="Hack the Colosseum | Home"
     />
     <meta
       property="twitter:description"
-      content="Join us for 'Hack a Tank,' a prestigious national-level 24-hour hackathon organized as part of the grand celebration of the 25th anniversary of SRM Valliammai Engineering College. Immerse yourself in a dynamic coding competition where innovation knows no bounds. Explore challenges, brainstorm ideas, and collaborate with fellow tech enthusiasts to develop groundbreaking solutions. Register now to showcase your skills, compete for exciting prizes, and be a part of this remarkable event in the world of engineering and technology."
+      content="Join us for Glenelg High School's Competitive Programming Club's upcoming 'Hack the Colosseum' hackathon event!"
     />
     <meta
       property="twitter:image"
-      content="https://www.hackatank.tech/images/diamond.jpg"
+      content=""
     />
 
     <!-- Additional Tags -->
     <meta
       name="keywords"
-      content="SRMVEC, Hackathon, SRM Valliammai Engineering College, Hack A Tank, Hack Tank, Hack A Tank Hackathon, Srmvec hackathon"
+      content="Hackathon, Glenelg, Colosseum, Hack the Colosseum, Hack colosseum"
     />
     <meta name="name" content="Hackathon" />
 
