--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <!-- Basic Tags -->
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/images/bearicon.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title>Hack The Colosseum | Home</title>
     <meta
       name="description"
